--- a/ProyectoDAS/Views/Shared/_Layout.cshtml
+++ b/ProyectoDAS/Views/Shared/_Layout.cshtml
@@ -60,6 +60,10 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Recomendaciones" asp-action="Index">Recomendaciones</a>
                         </li>
                         <li class="nav-item fs-5 fw-normal">
+                            @*<a class="nav-link text-white" href="#">Ofertas</a>*@
+                            <a class="nav-link text-white" asp-area="" asp-controller="CarritoInteligente" asp-action="Index">Carrito Inteligente</a>
+                        </li>
+                        <li class="nav-item fs-5 fw-normal">
                             @*<a class="nav-link text-white" href="#">Tiendas</a>*@
                             <a class="nav-link text-white" asp-area="" asp-controller="Tiendas" asp-action="Index">Tiendas</a>
                         </li>
